# xecs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: archetype.rs  component.rs  components.rs  dag.rs  dyn_type_vec.rs  entity.rs  group.rs  lib.rs  query.rs  range_set.rs  range_vec.rs  resource.rs  segs_tree.rs  sparse_set.rs  stage.rs  storage.rs  system.rs  systems.rs  tuple.rs  world.rs
src/archetype/: guards.rs  tests.rs
src/components/: full_owning.rs  sparse_set.rs
src/dag/: error.rs  iter.rs  tests.rs
src/entity/: manager.rs  mod.rs  recycle_manager.rs  tests.rs  unique_manager.rs
src/group/: mod.rs
src/group/full_owning/: mod.rs  query.rs
src/group/non_owning/: mod.rs  query.rs
src/group/partial_owning/: mod.rs  query.rs
src/query/: mod.rs  query.rs  query2.rs  query3.rs  query_with.rs  with.rs  without.rs
src/range_set/: iter.rs  mod.rs  tests.rs
src/storage/: component.rs  group.rs  guards.rs  id.rs  manager.rs  tests.rs
src/system/: mod.rs
src/world/: iter.rs
