[package]
name = "xecs"
version = "0.5.9"
authors = ["xstater:a166224@163.com"]
edition = "2021"
license = "MIT"
description = "An Entity-Component-System library"
documentation = "https://docs.rs/xecs/"
readme = "README.md"
repository = "https://github.com/xstater/xecs/"
keywords = ["gamedev","ecs","game-engine"]
categories = ["game-development","game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
parking_lot = "0.12"
futures = "0.3"
